# AdrenoToolsTest

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  adrenotools  main.cpp
app/src/main/cpp/adrenotools/: CMakeLists.txt
app/src/main/cpp/sds_library/: CMakeLists.txt  LICENSE.md  README.md
app/src/main/cpp/sds_library/CMake/: Bootstrap.cmake
app/src/main/cpp/sds_library/include/sds/: sds_algorithm.h  sds_fstream.h  sds_fstreamApk.h  sds_fstreamNsud.h  sds_string.h
app/src/main/cpp/sds_library/src/sds/: sds_fstream.cpp  sds_fstreamApk.cpp  sds_fstreamNsud.mm  sds_string.cpp
app/src/main/java/com/example/adrenotoolstest2/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
